--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,7 +30,7 @@ layout: main
     {% if page.draft == true %}
         <div class="catalogue-draft-message">
             <h1>
-                &#x1F64B; Coming Soon!
+                &#x1F3FB; Coming Soon!
             </h1>
             현재 열심히 글을 쓰고 있어요. 조금만 기다려주세요!
         </div>
